--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,4 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
+    - name: Hello world       # Name of step
+      run: echo 'Hello world' # Command to run
+      
     
